# Ladhs

./: .gitignore  Bottst.cabal  Lad.cabal  README.md  readme.md  stack.yaml
src/: Lad.hs  Main.hs  Utils.hs
src/Cmds/: Dino.hs  Ping.hs  Say.hs
