name:                Bottst
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Bottst#readme
license:             MIT
license-file:        license.txt
author:              Benjamin Philippe Applegate
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  readme.md

executable Bottst
  hs-source-dirs:      src
  main-is:             Lad.hs
  default-language:    Haskell2010
  build-depends: base >= 4.7 && < 5,
                 calamity,
                 text,
                 lens,
                 text-show,
                 polysemy,
                 polysemy-plugin,
                 di-polysemy,
                 di-df1 >= 1.2 && < 1.2.1
  ghc-options: -fplugin=Polysemy.Plugin